Complete missing features: tests, documentation, and improvements

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 PORT=3000
-MONGODB_USER=yourUsername
-MONGODB_PASSWORD=yourPassword
-MONGODB_URL=mongodb+srv://cluster-url.mongodb.net
+MONGODB_USER=your_mongodb_username
+MONGODB_PASSWORD=your_mongodb_password
+MONGODB_URL=cluster0.xxxxx.mongodb.net
 MONGODB_DB=contactsDB
+JWT_SECRET=your_256_bit_jwt_secret_key_here
+JWT_REFRESH_SECRET=your_256_bit_refresh_secret_key_here
+
+# Alternative: Use single connection string
+# MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.mongodb.net/database
