--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
@@ -23,9 +22,7 @@
   "devDependencies": {
     "cross-env": "^10.0.0",
     "eslint": "^9.34.0",
-    "jest": "^30.1.3",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.4"
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
