Add password reset functionality with Brevo email service and photo upload with Cloudinary

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,20 @@ MONGODB_DB=contactsDB
 JWT_SECRET=your_256_bit_jwt_secret_key_here
 JWT_REFRESH_SECRET=your_256_bit_refresh_secret_key_here
 
+# SMTP settings for Brevo
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=your_brevo_smtp_user
+SMTP_PASSWORD=your_brevo_smtp_password
+SMTP_FROM=your_registered_email@brevo.com
+
+# App domain for reset password link
+APP_DOMAIN=http://localhost:3000/auth
+
+# Cloudinary settings
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
 # Alternative: Use single connection string
 # MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.mongodb.net/database
